--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,27 +1,13 @@
 @import "tailwindcss";
 
 :root {
-    --background: #ffffff;
-    --foreground: #171717;
+    --background: #010001;
 
     /*custom ease-in-out function*/
     --ease-in-out-cubic: cubic-bezier(.645, .045, .355, 1);
 }
 
-@theme inline {
-    --color-background: var(--background);
-    --color-foreground: var(--foreground);
-}
-
-@media (prefers-color-scheme: dark) {
-    :root {
-        --background: #0a0a0a;
-        --foreground: #ededed;
-    }
-}
-
 body {
     background: var(--background);
-    color: var(--foreground);
     font-family: Arial, Helvetica, sans-serif;
 }
